2003-08-13  Nathaniel Smith  <njs@codesourcery.com>

	* qm/executable.py (Executable): Typo in docstring.

2003-08-12  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/text_result_stream.py
	(TextResultStream.WriteResult): Don't save results when using the
	"stats" format.

2003-08-11  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/command.py (ExecTestBase.RunProgram): Use the
	exit code returned by Filter.Run on Windows.

2003-08-11  Mark Mitchell  <mark@codesourcery.com>

	* qm/platform_unix.py (SignalException.__init__): Tweak message
	formatting.
	(_initialize): Tidy.
	* qm/test/execution_engine.py (ExecutionEngine._RunTests): Honor
	termination requests.
	* qm/test/target.py: Import qm.platform and signal.
	(Target.RunTest): Honor temination requests in the form of
	SIGTERM.

2003-08-11  Nathaniel Smith  <njs@codesourcery.com>

	* qm/test/classes/command.py (ExecTestBase.MakeEnvironment):
	Replace "." with "__" when turning context keys into environment
	variables.  Document in class docstring.
	(ExecTest.Run): Fix indentation.
	* qm/test/doc/reference.xml: Document new handling of context
	variables with "."s in them.
	* tests/regress/QMTest/selftest.py: Import os.path.  Add more
	documentation.
	(RegTest.Run): Check for a context file, and if one is found,
	use it.
	* tests/regress/env_context1: New directory.
	* tests/regress/env_context1/QMTest: New directory.
	* tests/regress/env_context1/QMTest/configuration: New file.
	* tests/regress/env_context1/context: New file.
	* tests/regress/env_context1/results.qmr: New file.
	* tests/regress/env_context1/exectest_nodot.qmt: New file.
	* tests/regress/env_context1/exectest_dot.qmt: New file.
	* tests/regress/env_context1/shellcommandtest_nodot.qmt: New file.
	* tests/regress/env_context1/shellcommandtest_dot.qmt: New file.
	* tests/regress/env_context1/shellscripttest_nodot.qmt: New file.
	* tests/regress/env_context1/shellscripttest_dot.qmt: New file.
	